# omp_offload_advisor

./: .gitignore  advise.sh  install.sh  test.sh
InstructionCount/: InstructionCount.cpp  Kernel.h
OMPAdvisor/: CMakeLists.txt  Kernel.cpp  Loop.cpp  OMPAdvisor.cpp  OMPAdvisor.h  OMPAdvisor_ASTConsumer.cpp  OMPAdvisor_Visitor.cpp
benchmarks/: run_data.sh  run_data_a100.sh  run_data_k80.sh  run_data_v100.sh
benchmarks/bfs/: Makefile  Makefile.a100  Makefile.k80  Makefile.v100  bfs.cpp  bfs_kernel1.cpp  bfs_kernel1_data.cpp  bfs_kernel2.cpp  bfs_kernel2_data.cpp  run_data.sh
benchmarks/correlation/: Makefile.a100  Makefile.k80  Makefile.v100  cc.h  cc_kernel.cpp  cc_kernel_data.cpp
benchmarks/covariance/: Makefile.a100  covariance.h  covariance_kernel1.cpp  covariance_kernel1_data.cpp  covariance_kernel2.cpp  covariance_kernel2_data.cpp
benchmarks/gauss/: Makefile.a100  gauss_kernel.cpp
benchmarks/laplace/: Makefile  laplace.cpp  laplace.h  laplace_kernel1.cpp  laplace_kernel1_data.cpp  laplace_kernel2.cpp  laplace_kernel2_data.cpp
benchmarks/mm/: Makefile  Makefile.v100  mm.cpp  mm.h  mm_kernel.cpp  mm_kernel_data.cpp
benchmarks/mv/: Makefile  Makefile.k80  mv.cpp  mv.h  mv_kernel.cpp  mv_kernel_data.cpp
benchmarks/nn/: Makefile  Makefile.v100  nn.cpp  nn.h  nn_kernel.cpp  nn_kernel_data.cpp
benchmarks/particlefilter/: run_data.sh  (+16 more)
device/: .gitignore  Makefile  deviceCapability.cu
model/: dataset_corona.csv  dataset_ookami.csv  dataset_rtx.csv  dataset_seawulf.csv  dataset_summit.csv  dataset_wombat.csv  deepres.py  kernel_run_model_brackets.py
(+21616 files in other folders)
